documented api_controller with swagger
